--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "dependencies": {
     "bs-vue-timeline": "^0.1.4",
     "core-js": "^3.6.5",
+    "keen-slider": "^5.2.2",
     "patch-package": "^6.2.2",
     "vue": "^2.6.12",
-    "vue-carousel": "^0.18.0",
-    "vue-custom-scrollbar": "^1.2.0"
+    "vuescroll": "^4.16.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
